# INEGI_ENVI

./: .gitignore  .pdm-python  README.md  __main__.py  app.py  pyproject.toml  requirements.txt
Inputs/: dataset.xlsx
assets/: dictionary.xlsx
src/inegi_envi_analysis/: __init__.py
src/inegi_envi_analysis/configuration/: __init__.py  config_handler.py
src/inegi_envi_analysis/dashboard_layouts/: __init__.py  data_visualization_layout.py  hypothesis_testing_layout.py
src/inegi_envi_analysis/data_downloading/: __init__.py  envi_downloading.py
src/inegi_envi_analysis/data_processing/: __init__.py  data_processing.py  data_wrangling.py
src/inegi_envi_analysis/hypothesis_tests/: __init__.py  jarque_bera_test.py  mann_whitney_test.py  t_student_test.py
src/inegi_envi_analysis/plots/: __init__.py  boxplot.py  histogram.py  stacked_barplot.py  stacked_histogram.py  standard_plots.py  t_student_histogram.py  violins.py  z_normal_histogram.py
