[project]
name = "INEGI_ENVI_Analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EdgarAllo0", email = "edgarallo0@hotmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
